--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "from config import gkey"
+    "from config import gkey\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,8 @@
     "OSHPD=OSHPD.loc[OSHPD['Year']=='2017']\n",
     "OSHPD.drop([5])\n",
     "OSHPD['OSHPD ID']=pd.to_numeric(OSHPD['OSHPD ID'], errors='coerce')\n",
-    "OSHPD=OSHPD.rename(columns={'Performance Measure':'pim',\n",
+    "OSHPD=OSHPD.rename(columns={'Year':'year',\n",
+    "                            'Performance Measure':'pim',\n",
     "                            'Hospital':'hosp',\n",
     "                            'OSHPD ID':'oshpdid',\n",
     "                            '# of Cases':'num_of_cases'})"
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -81,20 +82,20 @@
        "['ipps', 'cover_ca', 'oshpd']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "engine = create_engine(f'postgresql://{gkey}')\n",
+    "engine = create_engine(\"postgresql://\"+gkey)\n",
     "conn = engine.connect()\n",
     "engine.table_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>233</td>\n",
        "      <td>50013</td>\n",
        "      <td>CA</td>\n",
@@ -166,7 +167,7 @@
        "      <td>66961.93750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>234</td>\n",
        "      <td>50013</td>\n",
        "      <td>CA</td>\n",
@@ -176,7 +177,7 @@
        "      <td>44041.91667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>236</td>\n",
        "      <td>50013</td>\n",
        "      <td>CA</td>\n",
@@ -186,7 +187,7 @@
        "      <td>41746.76923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>233</td>\n",
        "      <td>50017</td>\n",
        "      <td>CA</td>\n",
@@ -196,7 +197,7 @@
        "      <td>85611.66667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>234</td>\n",
        "      <td>50017</td>\n",
        "      <td>CA</td>\n",
@@ -218,7 +219,7 @@
        "4  234  50017    CA       29  428593.6552  47781.37931  46530.24138"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -260,31 +261,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>BANNER LASSEN MEDICAL CENTER</td>\n",
        "      <td>51320</td>\n",
        "      <td>106184008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Orchard Hospital</td>\n",
        "      <td>51311</td>\n",
        "      <td>106040802</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Colusa Regional Medical Center</td>\n",
        "      <td>50434</td>\n",
        "      <td>106060870</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>EASTERN PLUMAS HOSPITAL-PORTOLA CAMPUS</td>\n",
        "      <td>51300</td>\n",
        "      <td>106320859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Fairchild Medical Center</td>\n",
        "      <td>51316</td>\n",
        "      <td>106474007</td>\n",
@@ -302,7 +303,7 @@
        "4                Fairchild Medical Center  51316  106474007"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +338,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Year</th>\n",
+       "      <th>year</th>\n",
        "      <th>pim</th>\n",
        "      <th>hosp</th>\n",
        "      <th>oshpdid</th>\n",
@@ -346,7 +347,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>2017</td>\n",
        "      <td>CABG Operative Mortality</td>\n",
        "      <td>STATEWIDE</td>\n",
@@ -354,7 +355,7 @@
        "      <td>13,049</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>2017</td>\n",
        "      <td>CABG Operative Mortality</td>\n",
        "      <td>Alta Bates Summit Medical Center</td>\n",
@@ -362,7 +363,7 @@
        "      <td>144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2017</td>\n",
        "      <td>CABG Operative Mortality</td>\n",
        "      <td>Valleycare Medical Center</td>\n",
@@ -370,7 +371,7 @@
        "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>2017</td>\n",
        "      <td>CABG Operative Mortality</td>\n",
        "      <td>Washington Hospital - Fremont</td>\n",
@@ -378,7 +379,7 @@
        "      <td>94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>2017</td>\n",
        "      <td>CABG Operative Mortality</td>\n",
        "      <td>Enloe Medical Center - Esplanade</td>\n",
@@ -390,7 +391,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   Year                       pim                              hosp  \\\n",
+       "   year                       pim                              hosp  \\\n",
        "0  2017  CABG Operative Mortality                         STATEWIDE   \n",
        "1  2017  CABG Operative Mortality  Alta Bates Summit Medical Center   \n",
        "2  2017  CABG Operative Mortality         Valleycare Medical Center   \n",
@@ -405,7 +406,7 @@
        "4  106040962.0          155  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,6 +414,13 @@
    "source": [
     "pd.read_sql_query('select * from oshpd',con=engine).head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
